# pstats_extender

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pdoc.yml  pydoc.yml  python-publish.yml
pstats_extender/: __init__.py
source/: conf.py  index.rst
