[tool.poetry]
name = "pstats_extender"
version = "0.1.0"
description = "Designed to save pstats log to folder."
license = "GNU"
authors = ["Kostiantyn Shmyhelskyi <graflearnt@gmail.com>"]
readme = "README.md"
packages = [{include = "pstats_extender"}]
homepage = "https://github.com/GrafLearnt/pstats_extender"
documentation = "https://github.com/GrafLearnt/pstats_extender/blob/main/README.md"
keywords = ["pstats", "profiler"]
classifiers = [
    "Topic :: Software Development :: Dev Tools",
]

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.pyright]
pythonVersion = '3.6'
venvPath = ''
venv = ''
